name:                eta-ffi
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/eta-ffi#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable eta-ffi
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       FfiFileParser
                       FFIDeclarations
                       JAR
  build-depends:       base >= 4.7 && < 5,
                       binary,
                       bytestring >= 0.10.6.0,
                       cassava,
                       codec-jvm >= 0,
                       containers >= 0.5.6.2,
                       directory >= 1.2.2.0,
                       exceptions >= 0.8.3,
                       mtl,
                       optparse-applicative,
                       path,
                       path-io,
                       semigroups >= 0.18.2,
                       text,
                       text-format,
                       transformers >= 0.4.2.0,
                       vector >= 0.11.0.0,
                       zip
