name:                eta-ffi
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/eta-ffi#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     Eta.FFI.Types
                         -- Eta.FFI.Main
  build-depends:       base >= 4.7 && < 5

executable eta-ffi
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , eta-ffi
                     , optparse-applicative
                     , semigroups
