name:                eta-ffi
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/eta-ffi#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  MultiParamTypeClasses
                       TypeOperators
                       DataKinds
                       TypeFamilies
                       FlexibleContexts
                       OverloadedStrings
  exposed-modules:     Eta.FFI
                       Eta.FFI.Filter
                       Eta.FFI.Spec
                       Eta.FFI.Types
                       Eta.FFI.Types.Class
                       Eta.FFI.Types.Core
                       Eta.FFI.Types.Spec
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , text
                     , mtl

  maven-depends:       org.reflections:reflections:0.9.11
  java-sources:        java/Utils.java

executable eta-ffi
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  default-extensions:  RecordWildCards
  build-depends:       base >= 4.7 && < 5
                     , eta-ffi
                     , optparse-applicative
                     , semigroups
